syntax = "proto3";

package sample;

service SampleService {
    rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse);
}

message GetUserInfoRequest {
    string id = 1;
}

message GetUserInfoResponse {
    string id = 1;
    string email = 2;
}